2006-11-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots) docs/gnuplot.doc: The documented syntax
	is 'newhistogram {"<title>"} {<linestyle>}' but in fact the code was
	giving an error return if no title was present.  Fixed.

2006-11-15  Ethan Merritt  <merritt@u.washington.edu>
            Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gp_types.h: Define overlaid fields in struct coordinate to hold
	RGB components of IMAGE and RGBIMAGE plot styles.

	* src/graphics.c (plot_image_or_update_axes) src/plot3d.c (get_3ddata)
	src/plot2d.c (get_data):  Store RGB data into newly defined fields. 
	This enables 'splot ... with rgbimage'.

	* src/graphics. (plot_image_or_update_axes) docs/gnuplot.doc:
	Remove restriction that rgb images could only be rendered as a 2D
	rectangle facing the viewer. The general filled-polygon mechanism can
	now be used for 3D rgbimages in arbitrary orientations.

	* demo/imaage.dem:  Modify last plot to show rgbimage in 3D.

2006-11-14  Ethan Merritt  <merritt@u.washington.edu>

	* hidden3d.c (build_networks): Add checks in the hidden3d code to
	cleanly skip empty plots.  This fixes a segfault demonstrated by
	running image.dem when the binary3 input file is missing. 

	* graphics.c (place_rectangles): Change the order of testing for
	2D and 3D cases; needed because 'set view map' was affecting 2D plots.
	Bug #1596313

2006-11-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/save.c (save_set_all): The gpsavediff script strips out lines
	from a gnuplot save file if the options they describe have not changed
	from the default. We can help this simplification by writing
	infrequently used suboptions on a separate line. Also change saved
	command to match documented command syntax 'set key nobox'.

	* src/set.c (set_tics) src/show.c (show_tics) src/save.c (save_set_all)
	docs/gnuplot.doc:  Allow tics to be set front/back without turning on
	the whole grid.    Syntax:   set tics {front|back}
